--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,8 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/.name
+.idea/*.xml
 *.iws
 *.iml
 *.ipr
@@ -41,4 +39,4 @@ bin/
 ### Mac OS ###
 .DS_Store
 
-### Local Properties ###
+
